# on-device-rag-performance

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  requirements.txt
.claude/commands/: ragrig-analyze.md  ragrig-config.md  ragrig-evaluate.md  ragrig-setup.md  ragrig-troubleshoot.md  ragrig.md
.cursor/rules/: ragrig.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
analysis/: langfuse_export.py  pyproject.toml  test_sdk.py
blogs/: on-device-rag-performance-benchmark.md
config/: config.yaml  config_mistral.yaml  sample_config.yaml  sample_config_full.yaml  sample_config_quick.yaml
docs/: cli.md  config.md  orchestrator-api.md  worker-api.md
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: EnvTab.tsx  RunTab.tsx  SetupTab.tsx
notebooks/: 01_explore_metrics.ipynb  02_explore_ragbench_corpus.ipynb  03_performance_analysis.ipynb  utils.py
orchestrator/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
orchestrator/src/orchestrator/: __init__.py  api.py  config.py  metrics.py  orchestrator.py  runner.py  tracing.py
orchestrator/src/orchestrator/datasets/: __init__.py  huggingface_ragbench.py  huggingface_scifact.py  schemas.py
orchestrator/src/orchestrator/exporters/: __init__.py  factory.py  jsonl.py  langfuse_exporter.py  span_converter.py
orchestrator/src/orchestrator/models/: __init__.py  loader.py  registry.py
scripts/: setup.sh  start-docker.sh  start-ui.sh  start-worker.sh
shared/: pyproject.toml
shared/src/shared_types/: __init__.py  dataset_loader.py  naming.py  schemas.py
skills/: README.md  ragrig-analyze.md  ragrig-config.md  ragrig-evaluate.md  ragrig-setup.md  ragrig-troubleshoot.md
tests/: __init__.py  conftest.py
tests/integration/: test_worker_api.py
tests/unit/analysis/: test_langfuse_export.py
tests/unit/orchestrator/: __init__.py  test_api.py  test_exporters.py  test_ground_truth_schema.py  test_huggingface_scifact.py  test_langfuse_exporter.py  test_metrics.py  test_model_loader.py  test_model_registry.py  test_runner.py
tests/unit/shared/: __init__.py  test_corpus_document.py  test_schemas.py
tests/unit/worker/: test_collection_registry.py  test_corpus_reader.py  test_device_backend.py  test_embedding_service.py  test_hardware_monitor.py  test_main_collection_status.py  test_main_load_models_remote.py  test_model_registry.py  test_remote_generator.py  test_retrieval_service.py
worker/: pyproject.toml  requirements.txt
worker/src/worker/: __init__.py  logging_config.py  main.py  tracing.py
worker/src/worker/api/: __init__.py
worker/src/worker/datasets/: __init__.py  corpus_reader.py
worker/src/worker/models/: __init__.py  embedder.py  embedder_http.py  generator.py  generator_http.py  generator_remote.py  llm.py  registry.py
worker/src/worker/services/: __init__.py  chromadb_bridge.py  collection_registry.py  embedding.py  generation.py  hardware_monitor.py  retrieval.py  server_manager.py
