[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-orchestrator"
version = "0.1.0"
description = "RAG evaluation orchestrator"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "langfuse>=2.0.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.1",
    "datasets==3.6.0",
    "pyarrow>=23.0.1",
    "huggingface_hub>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
