[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-orchestrator"
version = "0.1.0"
description = "RAG evaluation orchestrator"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.1",
    "datasets==3.6.0",
    "pyarrow>=23.0.1",
    "huggingface_hub>=1.4.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
rag-orchestrator = "orchestrator.runner:main"
rag-api = "orchestrator.api:main"

[tool.setuptools.packages.find]
where = ["src"]
