[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_types"
version = "0.1.0"
description = "Shared Pydantic schemas for Orchestrator and Worker"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[tool.setuptools.packages.find]
where = ["src"]
