[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-worker"
version = "0.1.0"
description = "Edge device RAG worker service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "chromadb>=1.5.1",
    "llama-cpp-python>=0.3.16",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]
